--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rock,papper,scissors</title>
-    <link rel="stylesheet" href="game.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="sec">
     <button onclick="selectComputerMove('rock');" class="play-btn">
@@ -36,7 +36,7 @@
         Reset Score
     </button>
 
-    <script src="game.js">
+    <script src="index.js">
   
     </script>
 </body>
