--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body class="sec">
     <button onclick="selectComputerMove('rock');" class="play-btn">
-        <img src="image/rock-emoji.png" class="play-icon">
+        <img src="rock-emoji.png" class="play-icon">
     </button>
 
     <button onclick="selectComputerMove('paper');" class="play-btn">
-        <img src="image/paper-emoji.png" alt="" class="play-icon">
+        <img src="paper-emoji.png" alt="" class="play-icon">
     </button>
 
     <button onclick="selectComputerMove('scissors');" class="play-btn">
-        <img src="image/scissors-emoji.png" alt="" class="play-icon">
+        <img src="scissors-emoji.png" alt="" class="play-icon">
     </button>
 
     <section class="sub-sec">
